# selenium-google-temperature

./: .pdm.toml  pyproject.toml
src/: main.py
