[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Morgan C. Nicholson", email = "nich.morgan@outlook.com"},
]
dependencies = [
    "selenium<4",
    "chromedriver-autoinstaller>=0.3.1",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
